fix: drawer overflow

--- a/src/components/Drawer/Drawer.css
+++ b/src/components/Drawer/Drawer.css
@@ -1,9 +1,12 @@
 .drawer-page-routes {
-  width: 5%;
+  width: 5.5rem;
   background-color: white;
   height: 100vh;
   position: sticky;
+  top: 0;
+  left: 0;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  overflow-y: auto;
 }
 
 .drawer-page-routes li {
